force-app/main/default/objects/Lesson_Learned__c/fields/Lesson_Learned__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Learned__c</fullName>
    <inlineHelpText>A detailed description of the lesson learned</inlineHelpText>
    <label>Lesson Learned</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>