force-app/main/default/objects/Lesson_Learned__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Lessons Learned</relationshipLabel>
    <relationshipName>Lessons_Learned</relationshipName>
    <type>Lookup</type>
</CustomField>