force-app/main/default/objects/Lesson_Learned__c/fields/Project_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_ID__c</fullName>
    <formula>Project__r.OwnerId</formula>
    <label>Project Owner ID</label>
    <type>Text</type>
</CustomField>