force-app/main/default/objects/Lesson_Learned__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <inlineHelpText>The general theme that the lesson learned relates to</inlineHelpText>
    <label>Topic</label>
    <type>TextArea</type>
</CustomField>