force-app/main/default/objects/Lesson_Learned__c/validationRules/Portal_User_Cannot_Create_for_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Portal_User_Cannot_Create_for_Project</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Block_Record_Creation__c,
$User.Id &lt;&gt; Project__r.OwnerId,
($Profile.Name = &quot;Project Contributor&quot; || $Profile.Name = &quot;National PM/Director&quot;)
)</errorConditionFormula>
    <errorMessage>You do not have the necessary permissions to create Lesson Learned records for this Project. Please ask the Project Owner/Manager to add you as a &quot;Project Contributor&quot; team member role.</errorMessage>
</ValidationRule>