force-app/main/default/objects/Lesson_Learned__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lesson_Learned__c</columns>
    <columns>Project__c</columns>
    <columns>Type__c</columns>
    <columns>Topic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>